@@ -1,3 +1,4 @@
+* Prefer to pick product from the source location
 * Change move attribute of ShipmentReport for a method
 * Rename inventory count quantity_resulting to total_quantity
 
